--- a/index.html
+++ b/index.html
@@ -4,16 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/3ae56bd447.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/variables.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/3ae56bd447.js"
+      crossorigin="anonymous"
+    ></script>
     <title>ohmyfood</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header-logo">
+        <img class="header-logo__img" src="images/logo/ohmyfood.png" alt="logo ohmyfood" />
+      </div>
+
+      <form class="header-formular" action="#">
+        <label for="localisation__label" class="header-formular__label">
+          <span class="header-formular__hiddenLabel">Rechercher votre destionation</span>
+          <i class="fa-solid fa-location-dot"></i>
+        </label>
+        <input
+        class="header-formular__input"
+          type="text"
+          name="localisation"
+          id="localisation"
+          placeholder="Paris, Belleville"
+        />
+      </form>
+    </header>
+    <!-- <main>
+        <section class="intro">
+            <div class="exploration">
+                <h1>Réservez le menu qui vous convient</h1>
+                <p>Découvrez des restaurants d'exception séléctionnés par nos soins</p>
+            </div>
+            <div class="explaination"></div>
+        </section>
+        <section class="menus">
+            <h2>Restaurants</h2>
+            <div class="container">
+                <div class="menu-card">
+                    <a href="#">
+                        <div class="menu-card__img">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="assiette contenant du poisson et de la salade">
+                        </div>
+                        <div class="menu-card__description">
+                            <div class="menu-card"></div>
+                        </div>
+                    </a>       
+                </div>
+            </div>
+        </section>
+    </main> -->
+  </body>
 </html>
