Add active step button

--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
           <a class="explaination__link" href="#">
             <button class="explaination__btn">
                 <span class="explaination__step">1</span>
-                <i class="fa-solid fa-mobile-screen-button"></i>Choisissez un
+                <i class="fa-solid fa-mobile-screen-button explaination__ico"></i>Choisissez un
               restaurant
             </button>
           </a>
           <a href="#">
             <button class="explaination__btn">
                 <div class="explaination__step"><span>2</span></div>
-                <i class="fa-solid fa-list"></i>Composez votre menu
+                <i class="fa-solid fa-list explaination__ico"></i>Composez votre menu
             </button>
           </a>
           <a href="#">
-            <button class="explaination__btn">
+            <button class="explaination__btn explaination__btn--active">
               <div class="explaination__step"><span>3</span></div>
-              <i class="fa-solid fa-store"></i>Dégustez au restaurant
+              <i class="fa-solid fa-store explaination__ico explaination__ico--active"></i>Dégustez au restaurant
             </button>
           </a>
         </div>
