--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     />
     <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script
-      src="https://kit.fontawesome.com/3ae56bd447.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/3ae56bd447.js" crossorigin="anonymous"></script>
     <title>ohmyfood</title>
   </head>
   <body>
@@ -27,7 +24,6 @@
           alt="logo ohmyfood"
         />
       </div>
-
       <form class="header-formular" action="#">
         <label for="localisation__label" class="header-formular__label">
           <span class="header-formular__hiddenLabel"
@@ -64,41 +60,110 @@
         <div class="explaination__container">
           <a class="explaination__link" href="#">
             <button class="explaination__btn">
-                <span class="explaination__step">1</span>
-                <i class="fa-solid fa-mobile-screen-button explaination__ico"></i>Choisissez un
-              restaurant
+              <span class="explaination__step">1</span>
+              <i class="fa-solid fa-mobile-screen-button explaination__ico"></i
+              >Choisissez un restaurant
             </button>
           </a>
           <a href="#">
             <button class="explaination__btn">
-                <div class="explaination__step"><span>2</span></div>
-                <i class="fa-solid fa-list explaination__ico"></i>Composez votre menu
+              <div class="explaination__step"><span>2</span></div>
+              <i class="fa-solid fa-list explaination__ico"></i>Composez votre
+              menu
             </button>
           </a>
           <a href="#">
             <button class="explaination__btn explaination__btn--active">
               <div class="explaination__step"><span>3</span></div>
-              <i class="fa-solid fa-store explaination__ico explaination__ico--active"></i>Dégustez au restaurant
+              <i
+                class="fa-solid fa-store explaination__ico explaination__ico--active"
+              ></i
+              >Dégustez au restaurant
             </button>
           </a>
         </div>
       </section>
 
-      <!-- <section class="menus">
-            <h2>Restaurants</h2>
-            <div class="container">
-                <div class="menu-card">
-                    <a href="#">
-                        <div class="menu-card__img">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="assiette contenant du poisson et de la salade">
-                        </div>
-                        <div class="menu-card__description">
-                            <div class="menu-card"></div>
-                        </div>
-                    </a>       
+      <section class="restaurants">
+        <h2>Restaurants</h2>
+        <div class="restaurants__container">
+          <div class="card">
+            <a class="card__link" href="#">
+              <img
+                class="card__img"
+                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="assiette contenant du poisson et de la salade"
+              />
+              <div class="card__description">
+                <div class="card__title">
+                  <h3>La palette du goût</h3>
+                  <p>Ménilmontant</p>
                 </div>
-            </div>
-        </section> -->
+                <div class="card__like">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a class="card__link" href="#">
+              <img
+                class="card__img"
+                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="assiette contenant du poisson et de la salade"
+              />
+              <div class="card__description">
+                <div class="card__title">
+                  <h3>La palette du goût</h3>
+                  <p>Charonne</p>
+                </div>
+                <div class="card__like">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a class="card__link" href="#">
+              <img
+                class="card__img"
+                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="assiette contenant du poisson et de la salade"
+              />
+              <div class="card__description">
+                <div class="card__title">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div class="card__like">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="card">
+            <a class="card__link" href="#">
+              <img
+                class="card__img"
+                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="assiette contenant du poisson et de la salade"
+              />
+              <div class="card__description">
+                <div class="card__title">
+                  <h3>Le délice des sens</h3>
+                  <p>Folie-Méricourt</p>
+                </div>
+                <div class="card__like">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+        <h2>ohmyfood</h2>
+    </footer>
   </body>
 </html>
