--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     />
     <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="https://kit.fontawesome.com/3ae56bd447.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3ae56bd447.js"
+      crossorigin="anonymous"
+    ></script>
     <title>ohmyfood</title>
   </head>
   <body>
@@ -25,17 +28,19 @@
         />
       </div>
       <form class="header-formular" action="#">
-        <label for="localisation__label" class="header-formular__label">
-          <span class="header-formular__hiddenLabel"
-            >Rechercher votre destionation</span
-          >
-          <i class="fa-solid fa-location-dot"></i>
+        <label class="header-formular__label" for="localisation__label">
+          <span class="header-formular__hiddenLabel">
+            Rechercher votre destination
+          </span>
+          <span class="header-formular__icoLabel">
+            <i class="fa-solid fa-location-dot"></i>
+          </span>
         </label>
         <input
           class="header-formular__input"
           type="text"
           name="localisation"
-          id="localisation"
+          id="localisation__label"
           placeholder="Paris, Belleville"
         />
       </form>
@@ -49,9 +54,9 @@
               Découvrez des restaurants d'exception, séléctionnés par nos soins
             </p>
           </div>
-          <a href="#"
-            ><button class="intro__btn">Explorer nos restaurants</button></a
-          >
+          <a class="intro__btn" href="#">
+            <p>Explorer nos restaurants</p>
+          </a>
         </div>
       </section>
 
@@ -100,7 +105,7 @@
                   <p>Ménilmontant</p>
                 </div>
                 <div class="card__like">
-                    <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart"></i>
                 </div>
               </div>
             </a>
@@ -118,7 +123,7 @@
                   <p>Charonne</p>
                 </div>
                 <div class="card__like">
-                    <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart"></i>
                 </div>
               </div>
             </a>
@@ -136,7 +141,7 @@
                   <p>Cité Rouge</p>
                 </div>
                 <div class="card__like">
-                    <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart"></i>
                 </div>
               </div>
             </a>
@@ -154,7 +159,7 @@
                   <p>Folie-Méricourt</p>
                 </div>
                 <div class="card__like">
-                    <i class="fa-regular fa-heart"></i>
+                  <i class="fa-regular fa-heart"></i>
                 </div>
               </div>
             </a>
@@ -163,7 +168,7 @@
       </section>
     </main>
     <footer>
-        <h2>ohmyfood</h2>
+      <h2>ohmyfood</h2>
     </footer>
   </body>
 </html>
