--- a/index.html
+++ b/index.html
@@ -20,38 +20,27 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-logo">
-        <img
-          class="header-logo__img"
-          src="images/logo/ohmyfood.png"
-          alt="logo ohmyfood"
-        />
-      </div>
-      <form class="header-formular" action="#">
-        <label class="header-formular__label" for="localisation__label">
-            <!-- Supprimer la class hidden label. Lors du Nesting j'irai chercher le premier enfant pour lui mettre la propriete font: 0/0 a -->
-          <span class="header-formular__hiddenLabel">
-            Rechercher votre destination
-          </span>
-          <!-- Supprimer la span autour de l'icon  et donc supprimer la clas ico__label. J'irai chercher l'icon lors du Nesting en ciblant la balise <i>-->
-          <span class="header-formular__icoLabel">
-            <i class="fa-solid fa-location-dot"></i>
-          </span>
+      <img
+        class="header__logo"
+        src="images/logo/ohmyfood.png"
+        alt="logo ohmyfood"
+      />
+    </header>
+    <main>
+      <form class="location-form" action="#">
+        <label class="location-form__label" for="location">
+          <span>Rechercher la ville de votre restaurant</span>
+          <i class="fa-solid fa-location-dot"></i>
         </label>
         <input
-          class="header-formular__input"
+          class="location-form__input"
           type="text"
-          name="localisation"
-          id="localisation__label"
+          name="search-city"
+          id="location"
           placeholder="Paris, Belleville"
         />
       </form>
-    </header>
-    <main>
-      <section class="intro">
-        <!-- Ici on a u problème d'architecture au niveau du bloc. L'élément "exploration est de trop. Il faut choisir entre exploration et description. Il faut avoir un élement
-            qui contient la description et un element qui contient le bouton ". Le padding que j'utilise certainement sur ma class exploration doit être mis directement sur la section intro.
-        Nous avons une boite de trop dans cette archi -->
+      <!-- <section class="intro">
         <div class="intro__exploration">
           <div class="intro__descrition">
             <h1>Réservez le menu qui vous convient</h1>
@@ -63,15 +52,11 @@
             <p>Explorer nos restaurants</p>
           </a>
         </div>
-      </section>
+      </section> -->
 
-      <section class="explaination">
+      <!-- <section class="explaination">
         <h2 class="explaination__title">Fonctionnement</h2>
-        <!-- On peut creer un bloc "step-container"  Ensuite il contiendra un bouton générique que je vais appeler step-button. 
-            Ses éléments seront step-button__index et step-button__. Ensuite  -->
         <div class="explaination__stepContainer">
-
-            <!-- ici il vaut mieux faire une <ol> puis mettre un lien sur les <li> -->
           <a class="explaination__stepButton" href="#">
             <span class="explaination__stepNumber">1</span>
             <i class="fa-solid fa-mobile-screen-button"></i>
@@ -97,9 +82,9 @@
             </div>
           </a>
         </div>
-      </section>
+      </section> -->
 
-      <section class="restaurants">
+      <!-- <section class="restaurants">
         <h2>Restaurants</h2>
         <div class="restaurants__containerCards">
           <div class="card">
@@ -175,9 +160,9 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer>
+    <!-- <footer>
       <div class="footer-content">
         <h2>ohmyfood</h2>
         <nav>
@@ -193,6 +178,6 @@
           <li><a href="#">Contact</a></li>
         </nav>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
