--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
           placeholder="Paris, Belleville"
         />
       </form>
+      <section class="intro">
+        <h1 class="intro__title">Réservez le menu qui vous convient</h1>
+        <p class="intro__argument">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <button class="btn btn--primary">Explorer nos restaurants</button>
+        </div>
+      </section>
       <!-- <section class="intro">
         <div class="intro__exploration">
           <div class="intro__descrition">
