Refacto variables and explaination section <ol>

--- a/index.html
+++ b/index.html
@@ -40,55 +40,36 @@
           placeholder="Paris, Belleville"
         />
       </form>
-      <section class="intro">
-        <h1 class="intro__title">Réservez le menu qui vous convient</h1>
-        <p class="intro__argument">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+      <section class="accueil-intro">
+        <h1 class="accueil-intro__title">Réservez le menu qui vous convient</h1>
+        <p class="accueil-intro__argument">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <button class="btn btn--primary">Explorer nos restaurants</button>
         </div>
       </section>
-      <!-- <section class="intro">
-        <div class="intro__exploration">
-          <div class="intro__descrition">
-            <h1>Réservez le menu qui vous convient</h1>
-            <p>
-              Découvrez des restaurants d'exception, séléctionnés par nos soins
-            </p>
-          </div>
-          <a class="intro__btn" href="#">
-            <p>Explorer nos restaurants</p>
-          </a>
-        </div>
-      </section> -->
-
-      <!-- <section class="explaination">
-        <h2 class="explaination__title">Fonctionnement</h2>
-        <div class="explaination__stepContainer">
-          <a class="explaination__stepButton" href="#">
-            <span class="explaination__stepNumber">1</span>
+      <section class="explaination">
+        <h2 class="explaination__heading">Fonctionnement</h2>
+        <ol class="explaination__list">
+          <li class="btn btn--step">
             <i class="fa-solid fa-mobile-screen-button"></i>
             Choisissez un restaurant
-          </a>
-
-          <a href="#" class="explaination__stepButton">
-            <div class="explaination__stepNumber">2</div>
-            <div class="explaination__stepIcon">
-              <i class="fa-solid fa-list"></i>
-            </div>
-            <div class="explaination__stepText">
-              <p>Composez-votre menu</p>
-            </div>
-          </a>
-          <a href="#" class="explaination__stepButton">
-            <div class="explaination__stepNumber">3</div>
-            <div class="explaination__stepIcon">
-              <i class="fa-solid fa-store"></i>
-            </div>
-            <div class="explaination__stepText">
-              <p>Dégustez au restaurant</p>
-            </div>
-          </a>
+          </li>
+          <li class="btn btn--step">
+            <i class="fa-solid fa-list"></i>
+            Composez votre menu
+          </li>
+          <li class="btn btn--step">
+            <i class="fa-solid fa-store"></i>
+            Dégustez au restaurant
+          </li>
+        </ol>
+      </section>
+      <section class="restaurants">
+        <h2 class="restaurants__heading">Restaurants</h2>
+        <div class="restaurants__container">
+          
         </div>
-      </section> -->
+      </section>
+
 
       <!-- <section class="restaurants">
         <h2>Restaurants</h2>
