--- a/index.html
+++ b/index.html
@@ -65,93 +65,61 @@
       </section>
       <section class="restaurants">
         <h2 class="restaurants__heading">Restaurants</h2>
-        <div class="restaurants__container">
-          
+        <div class="restaurants__grid">
+          <section class="card">
+            <div class="card__img">
+              <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plât avec du poisson">
+            </div>
+            <div class="card__footer">
+              <div class="description__container">
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+              </div>
+              <i class="fa-regular fa-heart card__like"></i>
+            </div>
+          </section>
+          <section class="card">
+            <div class="card__img">
+              <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat composé de poisson et de boulettes">
+            </div>
+            <div class="card__footer">
+              <div class="description__container">
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+              </div>
+              <i class="fa-regular fa-heart card__like"></i>
+            </div>
+          </section>
+          <section class="card">
+            <div class="card__img">
+              <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plât composé crème">
+            </div>
+            <div class="card__footer">
+              <div class="description__container">
+                <h3>À la Française</h3>
+                <p>Cité Rouge</p>
+              </div>
+              <i class="fa-regular fa-heart card__like"></i>
+            </div>
+          </section>
+          <section class="card">
+            <div class="card__img">
+              <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plât avec du poisson">
+            </div>
+            <div class="card__footer">
+              <div class="description__container">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+              </div>
+              <i class="fa-regular fa-heart card__like"></i>
+            </div>
+          </section>
         </div>
       </section>
-
-
-      <!-- <section class="restaurants">
-        <h2>Restaurants</h2>
-        <div class="restaurants__containerCards">
-          <div class="card">
-            <a class="card__link" href="#">
-              <img
-                class="card__img"
-                src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="assiette contenant du poisson et de la salade"
-              />
-              <div class="card__description">
-                <div class="card__title">
-                  <h3>La palette du goût</h3>
-                  <p>Ménilmontant</p>
-                </div>
-                <div class="card__like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="card">
-            <a class="card__link" href="#">
-              <img
-                class="card__img"
-                src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="assiette contenant du poisson et de la salade"
-              />
-              <div class="card__description">
-                <div class="card__title">
-                  <h3>La palette du goût</h3>
-                  <p>Charonne</p>
-                </div>
-                <div class="card__like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="card">
-            <a class="card__link" href="#">
-              <img
-                class="card__img"
-                src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="assiette contenant du poisson et de la salade"
-              />
-              <div class="card__description">
-                <div class="card__title">
-                  <h3>À la française</h3>
-                  <p>Cité Rouge</p>
-                </div>
-                <div class="card__like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="card">
-            <a class="card__link" href="#">
-              <img
-                class="card__img"
-                src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="assiette contenant du poisson et de la salade"
-              />
-              <div class="card__description">
-                <div class="card__title">
-                  <h3>Le délice des sens</h3>
-                  <p>Folie-Méricourt</p>
-                </div>
-                <div class="card__like">
-                  <i class="fa-regular fa-heart"></i>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section> -->
     </main>
-    <!-- <footer>
+    <footer class="footer">
       <div class="footer-content">
-        <h2>ohmyfood</h2>
+        <h2 class="footer-content__heading">ohmyfood</h2>
         <nav>
           <li>
             <span><i class="fa-solid fa-utensils"></i></span>
@@ -165,6 +133,6 @@
           <li><a href="#">Contact</a></li>
         </nav>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
