Starting menus pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
               </div>
-              <i class="fa-regular fa-heart card__like"></i>
+              <i class="fa-regular fa-heart"></i>
             </div>
           </section>
           <section class="card">
@@ -120,18 +120,21 @@
     <footer class="footer">
       <div class="footer-content">
         <h2 class="footer-content__heading">ohmyfood</h2>
-        <nav>
+        <ul class="footer-content__links">
           <li>
-            <span><i class="fa-solid fa-utensils"></i></span>
-            <a href="#">Proposer un restaurant</a>
+            <a href="#">
+              <i class="fa-solid fa-utensils"></i>
+              <span>Proposer un restaurant</span> 
+            </a>
           </li>
           <li>
-            <span><i class="fa-solid fa-handshake-angle"></i></span>
-            <a href="#">Devenir partenaire</a>
+            <a href="#">
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </a>
           </li>
           <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Contact</a></li>
-        </nav>
+          <li><a href="#">Contact</a></li></ul>
       </div>
     </footer>
   </body>
