--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="restaurants">
         <h2 class="restaurants__heading">Restaurants</h2>
         <div class="restaurants__grid">
-          <section class="card">
+          <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
               <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plât avec du poisson">
             </div>
@@ -77,8 +77,8 @@
               </div>
               <i class="fa-regular fa-heart"></i>
             </div>
-          </section>
-          <section class="card">
+          </a>
+          <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
               <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat composé de poisson et de boulettes">
             </div>
@@ -89,8 +89,8 @@
               </div>
               <i class="fa-regular fa-heart card__like"></i>
             </div>
-          </section>
-          <section class="card">
+          </a>
+          <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
               <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plât composé crème">
             </div>
@@ -101,8 +101,8 @@
               </div>
               <i class="fa-regular fa-heart card__like"></i>
             </div>
-          </section>
-          <section class="card">
+          </a>
+          <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
               <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plât avec du poisson">
             </div>
@@ -113,7 +113,7 @@
               </div>
               <i class="fa-regular fa-heart card__like"></i>
             </div>
-          </section>
+          </a>
         </div>
       </section>
     </main>
