--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,15 +10,128 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/3ae56bd447.js"
       crossorigin="anonymous"
     ></script>
-    <title>ohmyfood__La palette du goût</title>
-</head>
-<body>
-    
-</body>
+    <title>ohmyfood</title>
+  </head>
+  <body>
+    <header class="header">
+      <img
+        class="header__logo"
+        src="images/logo/ohmyfood.png"
+        alt="logo ohmyfood"
+      />
+    </header>
+    <main>
+      <section class="restaurant-intro">
+        <img
+          class="restaurant-intro__img"
+          src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          alt=""
+        />
+      </section>
+      <section class="restaurant-menu">
+        <h1 class="restaurant-menu__heading">La palette du goût</h1>
+        <h2 class="restaurant-menu__dish">Entrées</h2>
+        <ol class="restaurant-menu__list">
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Fricassée d'escargot</h3>
+              <p>Au pimet d'espelette</p>
+            </div>
+            <span class="dish__price">25€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Foie gras de canard mi-cuit</h3>
+              <p>Et ses copaeaux de truffe noire</p>
+            </div>
+            <span class="dish__price">35€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Oeuf au plat</h3>
+              <p>Assaisonné à la truffe sur lit de caviar</p>
+            </div>
+            <span class="dish__price">20€</span>
+          </li>
+        </ol>
+        <h2 class="restaurant-menu__dish">Plats</h2>
+        <ol class="restaurant-menu__list">
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Filet de boeuf aux herbes</h3>
+              <p>Accompagné de sa ribambelle de légumes</p>
+            </div>
+            <span class="dish__price">40€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Parmentier de queue de boeuf</h3>
+              <p>À la truffe noire sur sa purée de panais</p>
+            </div>
+            <span class="dish__price">35€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Filet de turbot</h3>
+              <p>Aux agrumes</p>
+            </div>
+            <span class="dish__price">44€</span>
+          </li>
+        </ol>
+        <h2 class="restaurant-menu__dish">Desserts</h2>
+        <ol class="restaurant-menu__list">
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Paris-Brest</h3>
+              <p>Revisité</p>
+            </div>
+            <span class="dish__price">18€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Macaron au chocolat d'exception</h3>
+              <p>Et glace à la vanille de Madagascar</p>
+            </div>
+            <span class="dish__price">22€</span>
+          </li>
+          <li class="btn btn--dish">
+            <div class="dish__description">
+              <h3>Mousse au chocolat</h3>
+              <p>Au piment d'Espelette et à la truffe noire</p>
+            </div>
+            <span class="dish__price">23€</span>
+          </li>
+        </ol>
+      </section>
+      <section class="restaurant-order">
+        <button class="btn btn--order">Commander</button>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-content">
+        <h2 class="footer-content__heading">ohmyfood</h2>
+        <ul class="footer-content__links">
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-utensils"></i>
+              <span>Proposer un restaurant</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-handshake-angle"></i>
+              Devenir partenaire
+            </a>
+          </li>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
