Add position on menu section

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <header class="header">
+      <a class="header__back-link" href="./index.html">
+        <i class="fa-solid fa-arrow-left"></i>
+      </a>
       <img
         class="header__logo"
         src="images/logo/ohmyfood.png"
@@ -107,9 +110,9 @@
             <span class="dish__price">23€</span>
           </li>
         </ol>
-      </section>
-      <section class="restaurant-order">
-        <button class="btn btn--order">Commander</button>
+        <div class="restaurant-menu__order">
+          <button class="btn btn--order">Commander</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
