Add bullet point on welcome page buttons

--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
         <h2 class="explaination__heading">Fonctionnement</h2>
         <ol class="explaination__list">
           <li class="btn btn--step">
+            <span class="bullet-point">1</span>
             <i class="fa-solid fa-mobile-screen-button"></i>
             Choisissez un restaurant
           </li>
           <li class="btn btn--step">
+            <span class="bullet-point">2</span>
             <i class="fa-solid fa-list"></i>
             Composez votre menu
           </li>
           <li class="btn btn--step">
+            <span class="bullet-point">3</span>
             <i class="fa-solid fa-store"></i>
             Dégustez au restaurant
           </li>
