--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </a>
           </li>
           <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Contact</a></li></ul>
+          <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li></ul>
       </div>
     </footer>
   </body>
