--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -132,7 +132,7 @@
             </a>
           </li>
           <li><a href="#">Mentions légales</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
         </ul>
       </div>
     </footer>
