Added  heart ico and ::before on the menu page

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -37,7 +37,10 @@
         />
       </section>
       <section class="restaurant-menu">
-        <h1 class="restaurant-menu__heading">La palette du goût</h1>
+        <div class="restaurant-menu__heading">
+          <h1>La palette du goût</h1>
+          <i class="fa-regular fa-heart"></i>
+        </div>
         <h2 class="restaurant-menu__dish">Entrées</h2>
         <ol class="restaurant-menu__list">
           <li class="btn btn--dish">
