Added  responsive design

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -18,15 +18,13 @@
     <title>ohmyfood</title>
   </head>
   <body>
-    <header class="header">
-      <a class="header__back-link" href="./index.html">
-        <i class="fa-solid fa-arrow-left"></i>
-      </a>
-      <img
-        class="header__logo"
-        src="images/logo/ohmyfood.png"
-        alt="logo ohmyfood"
-      />
+    <header>
+      <div class="header-content">
+        <a class="header-content__back-link" href="./index.html">
+          <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <img class="header-content__logo" src="images/logo/ohmyfood.png" alt="logo ohmyfood"/>
+      </div>
     </header>
     <main>
       <section class="restaurant-intro">
