--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <title>ohmyfood</title>
   </head>
   <body>
-    <header class="header">
-      <img
-        class="header__logo"
-        src="images/logo/ohmyfood.png"
-        alt="logo ohmyfood"
-      />
+    <header>
+      <div class="wrapper header-content">
+        <img
+          class="header-content__logo"
+          src="images/logo/ohmyfood.png"
+          alt="logo ohmyfood"
+        />
+      </div>
     </header>
-    <main>
+    <main class="wrapper">
       <form class="location-form" action="#">
         <label class="location-form__label" for="location">
           <span>Rechercher la ville de votre restaurant</span>
@@ -39,38 +41,46 @@
           placeholder="Paris, Belleville"
         />
       </form>
-      <section class="accueil-intro">
-        <h1 class="accueil-intro__title">Réservez le menu qui vous convient</h1>
-        <p class="accueil-intro__argument">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <button class="btn btn--primary">Explorer nos restaurants</button>
+      <section class="intro">
+        <div class="accueil-intro">
+          <h1 class="accueil-intro__title">
+            Réservez le menu qui vous convient
+          </h1>
+          <p class="accueil-intro__argument">
+            Découvrez des restaurants d'exception, séléctionnés par nos soins.
+          </p>
+          <button class="btn btn--primary">Explorer nos restaurants</button>
         </div>
-      </section>
-      <section class="explaination">
-        <h2 class="explaination__heading">Fonctionnement</h2>
-        <ol class="explaination__list">
-          <li class="btn btn--step">
-            <span class="bullet-point">1</span>
-            <i class="fa-solid fa-mobile-screen-button"></i>
-            Choisissez un restaurant
-          </li>
-          <li class="btn btn--step">
-            <span class="bullet-point">2</span>
-            <i class="fa-solid fa-list"></i>
-            Composez votre menu
-          </li>
-          <li class="btn btn--step">
-            <span class="bullet-point">3</span>
-            <i class="fa-solid fa-store"></i>
-            Dégustez au restaurant
-          </li>
-        </ol>
+        <div class="explaination">
+          <h2 class="explaination__heading">Fonctionnement</h2>
+          <ol class="explaination__list">
+            <li class="btn btn--step">
+              <span class="bullet-point">1</span>
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              Choisissez un restaurant
+            </li>
+            <li class="btn btn--step">
+              <span class="bullet-point">2</span>
+              <i class="fa-solid fa-list"></i>
+              Composez votre menu
+            </li>
+            <li class="btn btn--step">
+              <span class="bullet-point">3</span>
+              <i class="fa-solid fa-store"></i>
+              Dégustez au restaurant
+            </li>
+          </ol>
+        </div>
       </section>
       <section class="restaurants">
         <h2 class="restaurants__heading">Restaurants</h2>
         <div class="restaurants__grid">
           <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
-              <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plât avec du poisson">
+              <img
+                src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="photo d'un plât avec du poisson"
+              />
             </div>
             <div class="card__footer">
               <div class="description__container">
@@ -82,7 +92,10 @@
           </a>
           <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
-              <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat composé de poisson et de boulettes">
+              <img
+                src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="photo d'un plat composé de poisson et de boulettes"
+              />
             </div>
             <div class="card__footer">
               <div class="description__container">
@@ -94,7 +107,10 @@
           </a>
           <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
-              <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plât composé crème">
+              <img
+                src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="photo d'un plât composé crème"
+              />
             </div>
             <div class="card__footer">
               <div class="description__container">
@@ -106,7 +122,10 @@
           </a>
           <a class="card" href="./la-palette-du-gout.html">
             <div class="card__img">
-              <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plât avec du poisson">
+              <img
+                src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="photo d'un plât avec du poisson"
+              />
             </div>
             <div class="card__footer">
               <div class="description__container">
@@ -120,13 +139,13 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-content">
+      <div class="wrapper footer-content">
         <h2 class="footer-content__heading">ohmyfood</h2>
         <ul class="footer-content__links">
           <li>
             <a href="#">
               <i class="fa-solid fa-utensils"></i>
-              <span>Proposer un restaurant</span> 
+              <span>Proposer un restaurant</span>
             </a>
           </li>
           <li>
@@ -136,7 +155,8 @@
             </a>
           </li>
           <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li></ul>
+          <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
+        </ul>
       </div>
     </footer>
   </body>
