Added  slide menu animation

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -19,14 +19,14 @@
   </head>
   <body>
     <header>
-      <div class="header-content">
+      <div class="wrapper header-content">
         <a class="header-content__back-link" href="./index.html">
           <i class="fa-solid fa-arrow-left"></i>
         </a>
         <img class="header-content__logo" src="images/logo/ohmyfood.png" alt="logo ohmyfood"/>
       </div>
     </header>
-    <main>
+    <main class="wrapper">
       <section class="restaurant-intro">
         <img
           class="restaurant-intro__img"
@@ -117,7 +117,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-content">
+      <div class="wrapper footer-content">
         <h2 class="footer-content__heading">ohmyfood</h2>
         <ul class="footer-content__links">
           <li>
