--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -23,7 +23,11 @@
         <a class="header-content__back-link" href="./index.html">
           <i class="fa-solid fa-arrow-left"></i>
         </a>
-        <img class="header-content__logo" src="images/logo/ohmyfood.png" alt="logo ohmyfood"/>
+        <img
+          class="header-content__logo"
+          src="images/logo/ohmyfood.png"
+          alt="logo ohmyfood"
+        />
       </div>
     </header>
     <main class="wrapper">
@@ -47,6 +51,7 @@
               <p>Au pimet d'espelette</p>
             </div>
             <span class="dish__price">25€</span>
+            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -54,6 +59,7 @@
               <p>Et ses copaeaux de truffe noire</p>
             </div>
             <span class="dish__price">35€</span>
+            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -61,6 +67,7 @@
               <p>Assaisonné à la truffe sur lit de caviar</p>
             </div>
             <span class="dish__price">20€</span>
+            <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
         </ol>
         <h2 class="restaurant-menu__dish">Plats</h2>
@@ -71,6 +78,7 @@
               <p>Accompagné de sa ribambelle de légumes</p>
             </div>
             <span class="dish__price">40€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -78,6 +86,7 @@
               <p>À la truffe noire sur sa purée de panais</p>
             </div>
             <span class="dish__price">35€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -85,6 +94,7 @@
               <p>Aux agrumes</p>
             </div>
             <span class="dish__price">44€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
         </ol>
         <h2 class="restaurant-menu__dish">Desserts</h2>
@@ -95,6 +105,7 @@
               <p>Revisité</p>
             </div>
             <span class="dish__price">18€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -102,6 +113,7 @@
               <p>Et glace à la vanille de Madagascar</p>
             </div>
             <span class="dish__price">22€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
           <li class="btn btn--dish">
             <div class="dish__description">
@@ -109,6 +121,7 @@
               <p>Au piment d'Espelette et à la truffe noire</p>
             </div>
             <span class="dish__price">23€</span>
+                        <div class="dish__confirm"><i class="fa-solid fa-circle-check"></i></div>
           </li>
         </ol>
         <div class="restaurant-menu__order">
