Added  menu like btn animation

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -41,7 +41,7 @@
       <section class="restaurant-menu">
         <div class="restaurant-menu__heading">
           <h1>La palette du goût</h1>
-          <i class="fa-regular fa-heart"></i>
+          <!-- <i class="fa-regular fa-heart"></i> -->
         </div>
         <h2 class="restaurant-menu__dish">Entrées</h2>
         <ol class="restaurant-menu__list">
