Added analytics script

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -15,6 +15,20 @@
       src="https://kit.fontawesome.com/3ae56bd447.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-6XK66SR9X5"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-6XK66SR9X5");
+    </script>
     <title>ohmyfood--Le délice des sens--</title>
   </head>
   <body>
@@ -81,7 +95,7 @@
             <ol class="container-dish__list">
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Poulet rôti aux herbes de Provence </h3>
+                  <h3>Poulet rôti aux herbes de Provence</h3>
                   <p>Et sa crème de truffe</p>
                 </div>
                 <span class="dish__price">40€</span>
@@ -101,7 +115,7 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Côte de boeuf Angus </h3>
+                  <h3>Côte de boeuf Angus</h3>
                   <p>Et sa purée de panais</p>
                 </div>
                 <span class="dish__price">44€</span>
