--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -15,6 +15,20 @@
       src="https://kit.fontawesome.com/3ae56bd447.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-6XK66SR9X5"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-6XK66SR9X5");
+    </script>
     <title>ohmyfood--LA note enchantée--</title>
   </head>
   <body>
@@ -56,7 +70,7 @@
               </li>
               <li class="btn btn--dish">
                 <div class="dish__description">
-                  <h3>Caviar osciètre </h3>
+                  <h3>Caviar osciètre</h3>
                   <p>Sur blini à la farine de blé noir</p>
                 </div>
                 <span class="dish__price">35€</span>
